--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Title</title>
+		<title>Sierpinski Triangle</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Header</h1>
+			<h1>If you press your mouse enough times or hold your mouse press long enough, sp00ky triangles might appear</h1>
 		</header>
 			<section id="content">
 				<canvas id="SierpinskiTriangle" data-processing-sources="SierpinskiTriangle.pde">
