--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 	</head>
 	<body>
 		<header>
-			<h1>If you press your mouse enough times or hold your mouse press long enough, sp00ky triangles might appear</h1>
+			<h1> Sierpinski Triangle</h1>
 		</header>
 			<section id="content">
 				<canvas id="SierpinskiTriangle" data-processing-sources="SierpinskiTriangle.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    If you press your mouse enough times or hold your mouse press long enough, sp00ky triangles might appear.
 	    </footer>
 	</body>
 </html>
